# spectral-neural-odes

./: .gitignore  LICENSE  Makefile  README.md  RESULTS.md  pyproject.toml  requirements.txt
configs/: H1_lotka_volterra__regular_w120.yaml  H1_periodic_3d_a__regular_w120.yaml  default.yaml  fast_glycolytic__regular.yaml  fast_lorenz63__irregular.yaml  fast_lorenz96__irregular.yaml  fast_lotka_volterra__regular.yaml  fast_periodic_3d_a__irregular.yaml  fast_periodic_3d_a__regular.yaml  fast_periodic_3d_b__regular.yaml  fast_unstable_oscillator__regular.yaml  forced_vibration__irregular.yaml  forced_vibration__regular.yaml  glycolytic__irregular.yaml  glycolytic__regular.yaml  long_glycolytic__regular.yaml  long_lorenz63__irregular.yaml  long_lorenz96__irregular.yaml  long_lotka_volterra__regular.yaml  long_periodic_3d_a__irregular.yaml  long_periodic_3d_a__regular.yaml  long_periodic_3d_b__regular.yaml  long_unstable_oscillator__regular.yaml  lorenz63__irregular.yaml  lorenz63__regular.yaml  lorenz96__irregular.yaml  lorenz96__regular.yaml  lotka_volterra__irregular.yaml  lotka_volterra__regular.yaml  periodic_3d_a__irregular.yaml  periodic_3d_a__regular.yaml  periodic_3d_b__irregular.yaml  periodic_3d_b__regular.yaml  smoke.yaml  smoke_faithful_diffode__periodic_3d_a__regular.yaml  unstable_oscillator__irregular.yaml  unstable_oscillator__regular.yaml
lsa_node/: __init__.py  eval.py  losses.py  train.py
results/: README.md  summary_ablation.csv  summary_main.csv
scripts/: activate_env.sh  aggregate_results.py  gpu_smoke.py  launch_phase5.sh  make_configs.py  (+11 more)
(+846 files in other folders)
